--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,9 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/ngx-toastr/toastr.css" 
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+          
             ],
             "scripts": [
             ],
