--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "ngx-toastr": "^18.0.0",
-    "primeng": "^17.16.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.17.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
